// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`N8nChatInput > rendering > should render correctly with default props 1`] = `
<div>
  
  <div
    class="wrapper"
  >
    <div
      class="container"
      style="min-height: 80px;"
    >
      
      
      <!-- Warning banner when character limit is reached -->
      <!--v-if-->
      <textarea
        class="textarea ignore-key-press-node-creator ignore-key-press-canvas"
        maxlength="5000"
        placeholder=""
      />
      <div
        class="bottomActions"
      >
        <!--v-if-->
        <div
          class="rightActions"
        >
          <!--v-if-->
          <div
            class="actionsContent"
          >
            <button
              aria-disabled="true"
              aria-label="Send"
              aria-live="polite"
              class="button button brand medium iconOnly disabled is-disabled"
              data-icon-only="true"
              data-test-id="send-message-button"
              disabled=""
              type="button"
            >
              <transition-stub
                appear="false"
                css="true"
                name="n8n-button-fade"
                persisted="false"
              >
                <!--v-if-->
              </transition-stub>
              <div
                class="button-inner"
              >
                
                <svg
                  aria-hidden="true"
                  class="n8n-icon"
                  data-icon="arrow-up"
                  fill="currentColor"
                  focusable="false"
                  height="14px"
                  role="img"
                  viewBox="0 0 16 16"
                  width="14px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.56 8 14.5 9.06 8.75 3.31v11.94h-1.5V3.31L1.5 9.06.44 8 8 .44z"
                    fill-opacity=".87"
                  />
                </svg>
                
                
                
                
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <!--v-if-->
  </div>
  
</div>
`;

exports[`N8nChatInput > rendering > should render streaming state without disabling textarea 1`] = `
<div>
  
  <div
    class="wrapper"
  >
    <div
      class="container"
      style="min-height: 80px;"
    >
      
      
      <!-- Warning banner when character limit is reached -->
      <!--v-if-->
      <textarea
        class="textarea ignore-key-press-node-creator ignore-key-press-canvas"
        maxlength="5000"
        placeholder=""
      />
      <div
        class="bottomActions"
      >
        <!--v-if-->
        <div
          class="rightActions"
        >
          <!--v-if-->
          <div
            class="actionsContent"
          >
            <button
              aria-label="Stop"
              aria-live="polite"
              class="button button brand medium iconOnly"
              data-icon-only="true"
              data-test-id="send-message-button"
              type="button"
            >
              <transition-stub
                appear="false"
                css="true"
                name="n8n-button-fade"
                persisted="false"
              >
                <!--v-if-->
              </transition-stub>
              <div
                class="button-inner"
              >
                
                <svg
                  aria-hidden="true"
                  class="n8n-icon"
                  data-icon="filled-square"
                  fill="currentColor"
                  focusable="false"
                  height="14px"
                  overflow="hidden"
                  role="img"
                  viewBox="0 0 10 10"
                  width="14px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="10"
                    rx="2"
                    ry="2"
                    width="10"
                  />
                </svg>
                
                
                
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <!--v-if-->
  </div>
  
</div>
`;
